@@ -30,10 +30,10 @@ namespace System.Threading.Tasks
 	[FlagsAttribute, System.SerializableAttribute]
 	public enum TaskCreationOptions
 	{
-		None = 0x0,
-		PreferFairness = 0x1,
-		LongRunning = 0x8,
-		AttachedToParent = 0x10
+		None             = 0x0,
+		PreferFairness   = 0x1,
+		LongRunning      = 0x2,
+		AttachedToParent = 0x4
 	}
 }
 #endif
